<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rl_activity_general_container"
        style="@style/AppStyle.MatchMatchBackground">
    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_error_title"
            style="@style/AppStyle.Title"
            android:text="@string/authentication_fail_tv_error_title"/>
        <TextView
            android:id="@+id/tv_error_message"
            style="@style/AppStyle.TextView"
            android:paddingTop="20dp"
            android:text="@string/authentication_fail_tv_error_message"/>
    </LinearLayout>
        <Button
            android:id="@+id/btn_try"
            style="@style/AppStyle.BaseButton"
            android:layout_alignRight="@id/ll_error"
            android:layout_alignEnd="@id/ll_error"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/authentication_fail_btn_try" />
    </RelativeLayout>
</layout>